WIP - use textarea for input instead of input, multiline support, auto-ellipsification of multiline chiclets

--- a/templates/tags-input.html
+++ b/templates/tags-input.html
@@ -9,7 +9,7 @@
         <ti-tag-item data="::tag"></ti-tag-item>
       </li>
     </ul>
-    <input class="input"
+    <textarea class="input"
            autocomplete="off"
            ng-model="newTag.text"
            ng-model-options="{getterSetter: true}"
@@ -22,7 +22,7 @@
            ng-class="{'invalid-tag': newTag.invalid}"
            ng-disabled="disabled"
            ti-bind-attrs="{type: options.type, placeholder: options.placeholder, tabindex: options.tabindex, spellcheck: options.spellcheck}"
-           ti-autosize>
+           ti-autosize></textarea>
     <ul class="tag-list">
       <li class="tag-item"
           ng-repeat="tag in tagList.postItems() track by track(tag)"
