--- a/scss/tags-input.scss
+++ b/scss/tags-input.scss
@@ -2,6 +2,10 @@
 @import "variables";
 
 tags-input {
+  .close-button {
+    margin-top: 5px;
+    font-size: 25px;
+  }
   .tags {
     -moz-appearance: textfield;
     -webkit-appearance: textfield;
